--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,8 @@ jobs:
         sudo apt-get install python3-pip
         pip3 install --user flake8==3.7.8
         ~/.local/bin/flake8
-    - run: ./clang-format-diff.sh
-    - run: ./clang-tidy-diff.sh
+    - run: ./scripts/clang-format-diff.sh
+    - run: ./scripte/clang-tidy-diff.sh
 
   build:
     name: Build
