--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,6 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    env:
-        MY_VAR: Hi there! My name is
     steps:
     - uses: actions/setup-python@v1
       with:
@@ -23,11 +21,12 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: true
+    - name: install tools
+        pip3 install flake8==3.7.8
+        sudo apt-get install clang-format
+        sudo apt-get install clang-tidy
     - name: flake8
-      run: |
-        sudo apt-get install python3-pip
-        pip3 install --user flake8==3.7.8
-        ~/.local/bin/flake8
+      run: flake8
     - run: ./scripts/clang-format-diff.sh
     - run: ./scripte/clang-tidy-diff.sh
 
