--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,8 @@ jobs:
       with:
         submodules: true
     - name: install tools
-        pip3 install flake8==3.7.8
-        sudo apt-get install clang-format
-        sudo apt-get install clang-tidy
+        sudo pip3 install flake8==3.7.8
+        sudo apt-get install clang-format clang-tidy
     - name: flake8
       run: flake8
     - run: ./scripts/clang-format-diff.sh
