--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
       with:
         submodules: true
     - name: install tools
+      run: |
         sudo pip3 install flake8==3.7.8
         sudo apt-get install clang-format clang-tidy
     - name: flake8
