--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         sudo pip3 install flake8==3.7.8
         sudo apt-get install clang-format clang-tidy
+        echo "::add-path::/usr/lib/llvm-8/bin"
     - name: flake8
       run: flake8
     - run: ./scripts/clang-format-diff.sh
