--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
     - name: flake8
       run: flake8
     - run: ./scripts/clang-format-diff.sh
-    - run: ./scripts/clang-tidy-diff.sh
+    - run: bash -x ./scripts/clang-tidy-diff.sh
 
   build:
     name: Build
