--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
     - name: flake8
       run: flake8
     - run: ./scripts/clang-format-diff.sh
-    - run: bash -x ./scripts/clang-tidy-diff.sh
+    - run: ./scripts/clang-tidy-diff.sh
 
   build:
     name: Build
@@ -44,28 +44,65 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: true
+
     - name: install ninja (linux)
       run: sudo apt-get install ninja-build
       if: matrix.os == 'ubuntu-latest'
+
     - name: install ninja (osx)
       run: brew install ninja
       if: matrix.os == 'macos-latest'
+
     - name: install ninja (win)
       run: choco install ninja
       if: matrix.os == 'windows-latest'
+
     - name: mkdir
       run: mkdir -p out
+
     - name: cmake (linux)
       run: cmake -S . -B out -G Ninja
       if: matrix.os == 'ubuntu-latest'
+
     - name: cmake (osx)
       run: cmake -S . -B out -G Ninja
       if: matrix.os == 'macos-latest'
+
     - name: cmake (win)
       # -G "Visual Studio 15 2017"
       run: cmake -S . -B out
       if: matrix.os == 'windows-latest'
+
     - name: build
       run: cmake --build out
+
+    - name: test
+      run: python check.py --binaryen-bin=out/bin
+
+  build:
+    name: Build Asan
+    env:
+      ASAN_OPTIONS="detect_leaks=0 symbolize=1"
+      COMPILER_FLAGS="-fsanitize=address"
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+    - uses: actions/checkout@v1
+      with:
+        submodules: true
+
+    - name: install ninja
+      run: sudo apt-get install ninja-build
+
+    - name: cmake
+      run: |
+        mkdir -p out
+        cmake -S . -B out -G Ninja -DCMAKE_C_FLAGS="$COMPILER_FLAGS" -DCMAKE_CXX_FLAGS="$COMPILER_FLAGS"
+
+    - name: build
+      run: cmake --build out
+
     - name: test
       run: python check.py --binaryen-bin=out/bin
