--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
       run: mkdir -p out
 
     - name: cmake (linux)
-      run: cmake -S . -B out -G Ninja
+      run: cmake -S . -B out -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILE=clang++
       if: matrix.os == 'ubuntu-latest'
 
     - name: cmake (osx)
@@ -92,17 +92,13 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: true
-
     - name: install ninja
       run: sudo apt-get install ninja-build
-
     - name: cmake
       run: |
         mkdir -p out
-        cmake -S . -B out -G Ninja -DCMAKE_C_FLAGS="$COMPILER_FLAGS" -DCMAKE_CXX_FLAGS="$COMPILER_FLAGS"
-
+        cmake -S . -B out -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILE=clang++ -DCMAKE_C_FLAGS="$COMPILER_FLAGS" -DCMAKE_CXX_FLAGS="$COMPILER_FLAGS"
     - name: build
       run: cmake --build out
-
     - name: test
       run: python check.py --binaryen-bin=out/bin
