--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,11 +79,8 @@ jobs:
     - name: test
       run: python check.py --binaryen-bin=out/bin
 
-  build-asan:
-    name: Build Asan
-    env:
-      ASAN_OPTIONS: "detect_leaks=0 symbolize=1"
-      COMPILER_FLAGS: "-fsanitize=address"
+  build-gcc:
+    name: Build gcc
     runs-on: ubuntu-latest
     steps:
     - uses: actions/setup-python@v1
@@ -97,7 +94,79 @@ jobs:
     - name: cmake
       run: |
         mkdir -p out
+        cmake -S . -B out -G Ninja -DCMAKE_C_COMPILER=gcc-7 -DCMAKE_CXX_COMPILER=g++-7
+    - name: build
+      run: cmake --build out
+    - name: test
+      run: python check.py --binaryen-bin=out/bin
+
+  build-asan:
+    name: Build asan
+    runs-on: ubuntu-latest
+    env:
+      # FIXME we currently must disable LSAN entirely, see #1351
+      ASAN_OPTIONS: "detect_leaks=0 symbolize=1"
+      COMPILER_FLAGS: "-fsanitize=address"
+    steps:
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+    - uses: actions/checkout@v1
+      with:
+        submodules: true
+    - name: install ninja
+      run: sudo apt-get install ninja-build
+    - name: cmake
+      run: |
+        mkdir -p out
         cmake -S . -B out -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_FLAGS="$COMPILER_FLAGS" -DCMAKE_CXX_FLAGS="$COMPILER_FLAGS"
+    - name: build
+      run: cmake --build out
+    - name: test
+      run: python check.py --binaryen-bin=out/bin
+
+  build-ubsan:
+    name: Build ubsan
+    runs-on: ubuntu-latest
+    env:
+      COMPILER_FLAGS: "-fsanitize=undefined -fno-sanitize-recover=all -fsanitize-blacklist=$(pwd)/ubsan.blacklist"
+    steps:
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+    - uses: actions/checkout@v1
+      with:
+        submodules: true
+    - name: install ninja
+      run: sudo apt-get install ninja-build
+    - name: cmake
+      run: |
+        mkdir -p out
+        cmake -S . -B out -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_FLAGS="$COMPILER_FLAGS" -DCMAKE_CXX_FLAGS="$COMPILER_FLAGS"
+    - name: build
+      run: cmake --build out
+    - name: test
+      run: python check.py --binaryen-bin=out/bin
+
+  build-tsan:
+    name: Build tsan
+    runs-on: ubuntu-latest
+    env:
+      COMPILER_FLAGS: "-fsanitize=thread"
+      LINKER_FLAGS: "-fsanitize=thread"
+    steps:
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+    - uses: actions/checkout@v1
+      with:
+        submodules: true
+    - name: install ninja
+      run: sudo apt-get install ninja-build
+    - name: cmake
+      run: |
+        mkdir -p out
+        cmake -S . -B out -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_FLAGS="$COMPILER_FLAGS" -DCMAKE_CXX_FLAGS="$COMPILER_FLAGS" -DCMAKE_EXE_LINKER_FLAGS="$LINKER_FLAGS"
     - name: build
       run: cmake --build out
     - name: test
