--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,6 +99,38 @@ jobs:
       run: cmake --build out
     - name: test
       run: python check.py --binaryen-bin=out/bin
+    - name: archive
+      run: |
+        export PKGNAME="binaryen-$GITHUB_SHA-linux"
+        export TARBALL=$PKGNAME.tar.gz
+        mv bin binaryen-$GITHUB_SHA
+        tar -czf $TARBALL binaryen-$GITHUB_SHA
+        shasum -a 256 $TARBALL > $PKGNAME.tar.gz.sha256
+        echo "::set-env name=ASSET_PATH::$TARBALL"
+    - name: create release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: true
+        prerelease: true
+    - name: upload release asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        # This pulls from the CREATE RELEASE step above, referencing it's ID to
+        # get its outputs object, which include a `upload_url`. See this blog
+        # post for more info:
+        # https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./my-artifact.zip
+        asset_name: my-artifact.zip
+        asset_content_type: application/zip
 
   build-asan:
     name: asan
