--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,54 +31,6 @@ jobs:
     - run: ./scripts/clang-format-diff.sh
     - run: ./scripts/clang-tidy-diff.sh
 
-  build:
-    name: build
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    steps:
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.x'
-    - uses: actions/checkout@v1
-      with:
-        submodules: true
-
-    - name: install ninja (linux)
-      run: sudo apt-get install ninja-build
-      if: matrix.os == 'ubuntu-latest'
-
-    - name: install ninja (osx)
-      run: brew install ninja
-      if: matrix.os == 'macos-latest'
-
-    - name: install ninja (win)
-      run: choco install ninja
-      if: matrix.os == 'windows-latest'
-
-    - name: mkdir
-      run: mkdir -p out
-
-    - name: cmake (linux)
-      run: cmake -S . -B out -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
-      if: matrix.os == 'ubuntu-latest'
-
-    - name: cmake (osx)
-      run: cmake -S . -B out -G Ninja
-      if: matrix.os == 'macos-latest'
-
-    - name: cmake (win)
-      # -G "Visual Studio 15 2017"
-      run: cmake -S . -B out
-      if: matrix.os == 'windows-latest'
-
-    - name: build
-      run: cmake --build out
-
-    - name: test
-      run: python check.py --binaryen-bin=out/bin
-
   build-gcc:
     name: gcc
     runs-on: ubuntu-latest
@@ -103,7 +55,7 @@ jobs:
       run: |
         export PKGNAME="binaryen-$GITHUB_SHA-linux"
         export TARBALL=$PKGNAME.tar.gz
-        mv bin binaryen-$GITHUB_SHA
+        mv out/bin binaryen-$GITHUB_SHA
         tar -czf $TARBALL binaryen-$GITHUB_SHA
         shasum -a 256 $TARBALL > $PKGNAME.tar.gz.sha256
         echo "::set-env name=ASSET_PATH::$TARBALL"
@@ -131,106 +83,3 @@ jobs:
         asset_path: ./my-artifact.zip
         asset_name: my-artifact.zip
         asset_content_type: application/zip
-
-  build-asan:
-    name: asan
-    runs-on: ubuntu-latest
-    env:
-      # FIXME we currently must disable LSAN entirely, see #1351
-      ASAN_OPTIONS: "detect_leaks=0 symbolize=1"
-      COMPILER_FLAGS: "-fsanitize=address"
-    steps:
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.x'
-    - uses: actions/checkout@v1
-      with:
-        submodules: true
-    - name: install ninja
-      run: sudo apt-get install ninja-build
-    - name: cmake
-      run: |
-        mkdir -p out
-        cmake -S . -B out -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_FLAGS="$COMPILER_FLAGS" -DCMAKE_CXX_FLAGS="$COMPILER_FLAGS"
-    - name: build
-      run: cmake --build out
-    - name: test
-      run: python check.py --binaryen-bin=out/bin
-
-  build-ubsan:
-    name: ubsan
-    runs-on: ubuntu-latest
-    env:
-      COMPILER_FLAGS: "-fsanitize=undefined -fno-sanitize-recover=all"
-    steps:
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.x'
-    - uses: actions/checkout@v1
-      with:
-        submodules: true
-    - name: install ninja
-      run: sudo apt-get install ninja-build
-    - name: cmake
-      run: |
-        mkdir -p out
-        cmake -S . -B out -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_FLAGS="$COMPILER_FLAGS" -DCMAKE_CXX_FLAGS="$COMPILER_FLAGS -fsanitize-blacklist=$PWD/ubsan.blacklist"
-    - name: build
-      run: cmake --build out
-    - name: test
-      run: python check.py --binaryen-bin=out/bin
-
-  build-tsan:
-    name: tsan
-    runs-on: ubuntu-latest
-    env:
-      COMPILER_FLAGS: "-fsanitize=thread"
-      LINKER_FLAGS: "-fsanitize=thread"
-    steps:
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.x'
-    - uses: actions/checkout@v1
-      with:
-        submodules: true
-    - name: install ninja
-      run: sudo apt-get install ninja-build
-    - name: cmake
-      run: |
-        mkdir -p out
-        cmake -S . -B out -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_FLAGS="$COMPILER_FLAGS" -DCMAKE_CXX_FLAGS="$COMPILER_FLAGS" -DCMAKE_EXE_LINKER_FLAGS="$LINKER_FLAGS"
-    - name: build
-      run: cmake --build out
-    - name: test
-      run: python check.py --binaryen-bin=out/bin
-
-  # Build the .js outputs using emcc
-  build-emscripten:
-    name: emscipten
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.x'
-    - uses: actions/checkout@v1
-      with:
-        submodules: true
-    - name: install ninja
-      run: sudo apt-get install ninja-build
-    - name: download cmake
-      run: |
-        mkdir $HOME/cmake
-        wget -qO- https://github.com/Kitware/CMake/releases/download/v3.17.0/cmake-3.17.0-Linux-x86_64.tar.gz | tar -xzC $HOME/cmake --strip-components 1
-        echo "::add-path::$HOME/cmake/bin"
-    - name: emsdk install
-      run: |
-        mkdir $HOME/emsdk
-        git clone --depth 1 https://github.com/emscripten-core/emsdk.git $HOME/emsdk
-        $HOME/emsdk/emsdk update-tags
-        $HOME/emsdk/emsdk install tot
-        $HOME/emsdk/emsdk activate tot
-        echo "::add-path::$HOME/emsdk"
-    - name: emcc-tests
-      run: |
-        source $HOME/emsdk/emsdk_env.sh
-        ./scripts/emcc-tests.sh
