--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,16 +49,16 @@ jobs:
         cmake -S . -B out -G Ninja -DCMAKE_C_COMPILER=gcc-7 -DCMAKE_CXX_COMPILER=g++-7
     - name: build
       run: cmake --build out
-    - name: test
-      run: python check.py --binaryen-bin=out/bin
     - name: archive
+      id: archive
       run: |
-        export PKGNAME="binaryen-$GITHUB_SHA-linux"
+        exprot VERSION=1.0 #$GITHUB_SHA
+        export PKGNAME="binaryen-$VERSION-linux"
         export TARBALL=$PKGNAME.tar.gz
-        mv out/bin binaryen-$GITHUB_SHA
-        tar -czf $TARBALL binaryen-$GITHUB_SHA
+        mv out/bin binaryen-$VERSION
+        tar -czf $TARBALL binaryen-$VERSION
         shasum -a 256 $TARBALL > $PKGNAME.tar.gz.sha256
-        echo "::set-env name=ASSET_PATH::$TARBALL"
+        echo "::set-output name=assert_name::$TARBALL"
     - name: create release
       id: create_release
       uses: actions/create-release@v1
@@ -75,11 +75,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        # This pulls from the CREATE RELEASE step above, referencing it's ID to
-        # get its outputs object, which include a `upload_url`. See this blog
-        # post for more info:
-        # https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./my-artifact.zip
-        asset_name: my-artifact.zip
-        asset_content_type: application/zip
+        asset_path: ./${{ steps.archive.outputs.asset_name }}
+        asset_name: ${{ steps.archive.outputs.asset_name }}
+        asset_content_type: application/gzip
