--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,6 +77,32 @@ jobs:
     - name: test
       run: python check.py --binaryen-bin=out/bin
 
+  # Build with gcc 6.3 and run tests on Alpine Linux (inside chroot).
+  # Note: Alpine uses musl libc.
+  build-alpine:
+    name: alpine
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+    - uses: actions/checkout@v1
+      with:
+        submodules: true
+    - name: start docker
+      run: |
+        docker run -w /src -dit --name alpine -v $PWD:/src node:lts-alpine
+        echo "docker exec -it alpine \"$@\";" > ./alpine.sh
+        chmod +x ./alpine.sh
+    - name: start docker
+        - ./alpine.sh apk update
+        - ./alpine.sh apk add build-base cmake git python3 clang ninja
+    - name: build
+        - ./alpine.sh cmake . -G Ninja
+        - ./alpine.sh ninja
+    - name: test
+        - ./alpine.sh python3 ./check.py
+
   build-gcc:
     name: gcc
     runs-on: ubuntu-latest
